--- a/androidApp/src/main/res/values-ru/strings.xml
+++ b/androidApp/src/main/res/values-ru/strings.xml
@@ -80,4 +80,30 @@
     <string name="try_again">Повторить</string>
     <string name="camera_permission_rationale">Для сканирования QR-кодов требуется доступ к камере</string>
     <string name="camera_permission_denied">Доступ к камере запрещён. Пожалуйста, включите в настройках.</string>
+    
+    <!-- Accessibility (content descriptions) -->
+    <string name="cd_app_logo">Логотип QR-SHIELD</string>
+    <string name="cd_scanner_preview">Предпросмотр камеры для сканирования QR-кодов</string>
+    <string name="cd_close_scanner">Закрыть сканер</string>
+    <string name="cd_toggle_flash">Переключить вспышку</string>
+    <string name="cd_scan_result">Результат сканирования с вердиктом и уровнем риска</string>
+    <string name="cd_scan_button">Начать сканирование QR-кодов</string>
+    <string name="cd_gallery_button">Выбрать изображение QR-кода из галереи</string>
+    <string name="cd_copy_button">Копировать URL в буфер обмена</string>
+    <string name="cd_share_button">Поделиться URL</string>
+    <string name="cd_open_url">Открыть URL в браузере</string>
+    <string name="cd_delete_item">Удалить это сканирование из истории</string>
+    <string name="cd_clear_history">Очистить всю историю сканирований</string>
+    <string name="cd_search_history">Поиск в истории сканирований</string>
+    <string name="cd_filter_safe">Показать только безопасные сканирования</string>
+    <string name="cd_filter_suspicious">Показать только подозрительные сканирования</string>
+    <string name="cd_filter_malicious">Показать только опасные сканирования</string>
+    <string name="cd_history_item">Элемент истории сканирований</string>
+    <string name="cd_settings_toggle">Переключить настройку</string>
+    <string name="cd_back_button">Назад</string>
+    <string name="cd_processing">Обработка, пожалуйста подождите</string>
+    <string name="cd_safe_verdict">URL безопасен для посещения</string>
+    <string name="cd_suspicious_verdict">Подозрительный URL, действуйте с осторожностью</string>
+    <string name="cd_malicious_verdict">Внимание, URL похож на вредоносную фишинговую попытку</string>
+    <string name="cd_risk_score">Уровень риска из 100</string>
 </resources>
