--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="tagline">Scan QR codes. Detect phishing.</string>
     
     <!-- Navigation -->
+    <string name="nav_home">Home</string>
     <string name="nav_scan">Scan</string>
     <string name="nav_history">History</string>
     <string name="nav_settings">Settings</string>
